external-crates/move/crates/move-compiler/tests/move_2024/typing/lambda_return_invalid_simple.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_2024/typing/lambda_return_invalid_simple.move:8:15
  │
8 │         call!<u64>(|| return &0);
  │               ^^^     --------- Given: '&{integer}'
  │               │        
  │               Invalid type annotation
  │               Expected: 'u64'

error[E04007]: incompatible types
  ┌─ tests/move_2024/typing/lambda_return_invalid_simple.move:9:15
  │
9 │         call!<&u64>(|| return 0);
  │               ^^^^     -------- Given: integer
  │               │         
  │               Invalid type annotation
  │               Expected: '&u64'

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/lambda_return_invalid_simple.move:10:15
   │
10 │         call!<(&u64, u8)>(|| return (&0, 1, 3));
   │               ^^^^^^^^^^     ----------------- Given expression list of length 3: '(&{integer}, {integer}, {integer})'
   │               │               
   │               Invalid type annotation
   │               Expected expression list of length 2: '(&u64, u8)'
